--- a/Templates/result.html
+++ b/Templates/result.html
@@ -31,8 +31,14 @@
     <p style="font-size: 20px">Income: {{ Seidi.Income }}</p>
     <p style="font-size: 20px">Loan_Amount: {{ Seidi.Loan_Amount}}</p>
     <p style="font-size: 20px">{{ Seidi.Prediction}}</p></h3>
-    <a href="http://localhost:8891/notebooks/credit_approval.ipynb">
+    <a href="http://localhost:8891/notebooks/LoanPrediction.ipynb">
         <button>Back to Homepage</button>
+    </a>
+    <a href="http://localhost:8891/notebooks/credit_approval.ipynb">
+        <button>Back to Homepage1</button>
+    </a>
+    <a href="https://seidiali21.github.io/credit_approval/">
+        <button>Back to Homepage2/button</button>
     </a>
     <div>
         <img src="../Images/output.png" align="middle"/>
